<resources>
    <string name="app_name">FitNow</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="tmb_desc">TMB é a sigla para Taxa Metabólica Basal. Usado para descobrir a quantidade calórica que o corpo necessita, com base em seu estilo de vida.</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="weight">Peso(kg)</string>
    <string name="height">Altura(cm)</string>
    <string name="calcular">Calcular</string>
    <string name="fields_messages">Todos os campos precisam ser preenchidos corretamente</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="imc_normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="imc_response">Imc: %1$.2f</string>
    <string name="tmb_response">Tmb: %1$.2f</string>
    <string name="list_response">Resultado: %1$.2f, data: %2$s</string>
    <string name="save">salvar</string>
    <string name="saved">RegistroSalvoComSucesso</string>
    <string name="search">Buscar</string>
    <string name="age">idade</string>
    <string name="calorias">CALORIAS</string>

    <string name="Excluir_Registro">Você realmente quer excluír o registro?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Registro_removido">Registro removido com sucesso</string>
    <string name="calc_saved">Registro salvo com sucesso</string>
</resources>