<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/edit_tmb_weight"
            style="@style/EditTextForm"
            android:hint="@string/weight" />


        <EditText
            android:id="@+id/edit_tmb_age"
            style="@style/EditTextForm"
            android:hint="@string/height" />

        <EditText
            android:id="@+id/edit_tmb_height"
            style="@style/EditTextForm"
            android:hint="@string/age" />

        <Spinner
            android:id="@+id/spinner_tmb_lifestyle"
            style="@style/SppinerForm"
            android:entries="@array/tmb_lifestyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_tmb_send"
            style="@style/ButtonViewForm"
            android:text="@string/calcular" />

    </LinearLayout>
</ScrollView>